# ExaTon

./: .flutter-plugins-dependencies  .gitignore  README.md  biome.json  components.json  next.config.ts  openapi.yaml  package-lock.json  package.json  pubspec.yaml  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/client/: Cargo.toml  README.md
src-tauri/src/client/.openapi-generator/: FILES
src-tauri/src/client/docs/: AccountApi.md  ConfigFileOption.md  ConfigFileOptionValue.md  CreditPool.md  CreditPoolMember.md  CreditPoolsApi.md  DeletePlayerListRequestBody.md  Error.md  ExtendServerStopTimeRequestBody.md  FileInfo.md  GetAccount200Response.md  GetAccount200ResponseData.md  GetConfigFileData200Response.md  GetCreditPool200Response.md  GetCreditPoolMembers200Response.md  GetCreditPools200Response.md  GetFileInfo200Response.md  GetPlayerList200Response.md  GetPlayerLists200Response.md  GetServer200Response.md  GetServerLog200Response.md  GetServerLog200ResponseData.md  GetServerMotd200Response.md  GetServerMotd200ResponseData.md  GetServerRam200Response.md  GetServerRam200ResponseData.md  GetServers200Response.md  GetStartServer200Response.md  PostServerCommandRequestBody.md  PostServerMotdRequest.md  PostServerRamRequest.md  PostStartServerRequest.md  PutPlayerListRequestBody.md  Server.md  ServerActionsApi.md  ServerFilesApi.md  ServerLogsApi.md  ServerOptionsApi.md  ServerPlayers.md  ServerPlayersApi.md  (+5 more)
src-tauri/src/client/src/apis/: account_api.rs  configuration.rs  credit_pools_api.rs  mod.rs  server_actions_api.rs  server_files_api.rs  server_logs_api.rs  server_options_api.rs  server_players_api.rs  servers_api.rs
src-tauri/src/client/src/models/: config_file_option.rs  config_file_option_value.rs  credit_pool.rs  credit_pool_member.rs  delete_player_list_request_body.rs  error.rs  extend_server_stop_time_request_body.rs  file_info.rs  get_account_200_response.rs  get_account_200_response_data.rs  get_config_file_data_200_response.rs  get_credit_pool_200_response.rs  get_credit_pool_members_200_response.rs  get_credit_pools_200_response.rs  get_file_info_200_response.rs  get_player_list_200_response.rs  get_player_lists_200_response.rs  get_server_200_response.rs  get_server_log_200_response.rs  get_server_log_200_response_data.rs  get_server_motd_200_response.rs  get_server_motd_200_response_data.rs  get_server_ram_200_response.rs  get_server_ram_200_response_data.rs  get_servers_200_response.rs  get_start_server_200_response.rs  mod.rs  post_server_command_request_body.rs  post_server_motd_request.rs  post_server_ram_request.rs  post_start_server_request.rs  put_player_list_request_body.rs  server.rs  server_players.rs  server_software.rs  (+3 more)
src-tauri/src/exaton_api_lib/: accounts.rs  api_access.rs  credit_pools.rs  files.rs  keychain.rs  mod.rs  servers.rs  token_convert.rs  websocket.rs
(+292 files in other folders)
