[package]
name = "exaton-next"
version = "0.1.0-dev"
description = "The Next Generation Of Exaroton Client"
authors = ["RimakiTaema"]
license = ""
repository = "https://github.com/RimakiTaema/ExaTon/tree/next/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exaton_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
openapi = { path = "src/client" }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
